--- a/changelog.txt
+++ b/changelog.txt
@@ -14,6 +14,7 @@ package corner.orm.tapestry.component
 * component下面几个java文件均过期，采用select下面新的组件。
 package corner.orm.tapestry.page
 * AbstractEntityPage 中加入保存blob的操作方法.
+* 修改AbstractEntityPage方法，加入参数IfNullDelete,当blob为空时，是否删除该实体.
 
 
 changes in version 2.2.1 	(2006-10-17)
