--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ changes in version 2.2.2 	(unreleased)
 ------------------------------------------
 package corner.util
 * 加入对货币的四舍五入操作（CurrencyUtil）.
+* 加入了减法、除法的操作.
 
 package corner.orm.tapestry.validator
 * 加入了实体是否存在的validator。
