升级dojo到0.4,以及升级到最新的tapestry4.1.1
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2117 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,11 @@ http://www.bjmaxinfo.com
 
 changes in version 2.2.2 	(unreleased)
 ------------------------------------------
+package corner.widget
+* 升级dojo到0.4版本
+* 升级tapestry到最新（1027）的版本
+* 纠正应为升级dojo带来的js错误
+
 package corner.util
 * 加入对货币的四舍五入操作（CurrencyUtil）.
 * 加入了减法、除法的操作.
