纠正css的错误，同时纠正了TextAreaBox的引用新的dojo的错误
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2123 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,7 @@ package corner.widget
 * 升级dojo到0.4版本
 * 升级tapestry到最新（1027）的版本
 * 纠正应为升级dojo带来的js错误
+* 纠正TextAreaBox的js错误（dojo的升级）
 
 package corner.util
 * 加入对货币的四舍五入操作（CurrencyUtil）.
