--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,9 @@ CORNER FRAMEWORK
 ===========================================
 http://www.bjmaxinfo.com 
 
+changes in version 2.3 	(unreleased)
+------------------------------------------
+
 
 changes in version 2.2.2 	(2006-10-29)
 ------------------------------------------
