纠正TextArea的行和列的错误
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2132 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,8 @@ http://www.bjmaxinfo.com
 
 changes in version 2.3 	(unreleased)
 ------------------------------------------
-
+package corner.widget
+* 纠正TextAreaBox的rows和cols的错误.
 
 changes in version 2.2.2 	(2006-10-29)
 ------------------------------------------
