增加动态产生组件的功能，结合了ejb3.0以及hibernate3.2ga,tapestry4.1.1-snapshot
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2217 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/changelog.txt
+++ b/changelog.txt
@@ -14,6 +14,8 @@ package corner.orm.tapestry.component
 package corner.orm.hibernate
 * 删除expression表达式的antlr方式，采用新版本的正则表达式。
 
+package corner.orm.taepstry
+* 增加了动态生成组件的Worker，根据模型来动态自动产生组件.
 
 changes in version 2.2.2 	(2006-10-29)
 ------------------------------------------
