--- a/changelog.txt
+++ b/changelog.txt
@@ -16,7 +16,7 @@ package corner.orm.hibernate
 
 package corner.orm.taepstry
 * 增加了动态生成组件的Worker，根据模型来动态自动产生组件.
-
+* 增加了QueryBox组件.
 changes in version 2.2.2 	(2006-10-29)
 ------------------------------------------
 package corner.widget
