扩展了组件的展示
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2733 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/changelog.txt
+++ b/changelog.txt
@@ -20,6 +20,7 @@ package corner.orm.hibernate
 package corner.orm.taepstry
 * 增加了动态生成组件的Worker，根据模型来动态自动产生组件.
 * 增加了QueryBox组件.
+* 增加了对分页组件的扩展展示 
 changes in version 2.2.2 	(2006-10-29)
 ------------------------------------------
 package corner.widget
