修改了corner版本号，升级了hibernate到3.2.6
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4279 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,11 @@ CORNER FRAMEWORK
 ===========================================
 http://www.bjmaxinfo.com 
 
+changes in version 2.5.1 	(unreleased)
+------------------------------------------
+* 升级Tapestry到4.1.6
+* 升级hibernate到3.2.6
+
 changes in version 2.3 	(unreleased)
 ------------------------------------------
 * 升级Tapestry到4.1.1
