升级了corner版本为2.5.2,整合简单整合XFire
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4342 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 CORNER FRAMEWORK
 ===========================================
-http://www.bjmaxinfo.com 
+http://www.bjmaxinfo.com
+ 
+changes in version 2.5.2 	(unreleased)
+------------------------------------------
+* 增加了XFire的整合
 
 changes in version 2.5.1 	(unreleased)
 ------------------------------------------
